<resources>
    <string name="app_name">PFDM-UDV-2021</string>
    <string name="app_version">V1.1.0</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="signup_with_others">o Iniciar Sesion con</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sign up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="nav_mapa">Mapa</string>
    <string name="nav_historial">Historial</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nombre_de_la_localizacion">Nombre de la localizacion</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="enter_password">Ingresar Contraseña</string>
    <string name="enter_confirm_password">Confirmar Contraseña</string>
    <string name="enter_phone_number">Ingresar Correo</string>
    <string name="remember_me">Recordarme</string>
    <string name="create_new_account">Crear Nueva Cuenta</string>
    <string name="ingresar_nombre_de_usuario">Ingresar Username</string>
    <string name="nombre_de_usuario">Username</string>
    <string name="crear">Crear</string>
    <string name="registro">Registro</string>
    <string name="logout">Logout</string>
    <string name="actualizar">Actualizar</string>
    <string name="title_activity_check_email">CheckEmailActivity</string>
    <string name="eliminar">Eliminar</string>
    <string name="compartir">Compartir</string>
    <string name="about_us">About us</string>
    <string name="volver">Volver</string>
    <string name="datos_de_la_ubicacion">Datos de la Ubicacion</string>
    <string name="tomar_una_foto">Tomar una foto</string>
    <string name="subir_de_la_galeria">Subir de la Galeria</string>

    <!--Maps-->
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="estas_seguro_que_quieres_cerrar_sesion">Estas seguro que quieres\n cerrar Sesion?</string>
    <string name="msg_activar_localizaciond">La ubicacion no esta\nactiva deseas Activarla?</string>
    <string name="estas_seguro_que_quieres_ubicacion">Estas seguro que quieres\neliminar esta ubicacion?</string>
    <string name="msg_de_bienvenida">Hi there!\nBienvenid@ a la version\n1.0.0 de esta aplicacion\nespero no la hagas tronar\ny que te diviertas\ndescubriendola.</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="aceptar">Aceptar</string>
    <string name="msg_correo_de_verificacion">Se ha enviado un correo de verifiación.</string>
    <string name="msg_verifica_tu_correo">Por favor verifica\ntu correo.</string>
    <string name="msg_se_a_enviado_un_correo">Se ha enviado un\ncorreo de verifiación.</string>
    <string name="enviar_otro_correo">Enviar otro correo</string>
    <string name="password_incorrecta">La contraseña ingresada\nes incorrecta.</string>
    <string name="se_elimino_la_cuenta">Se elminó tu cuenta.</string>
    <string name="insertar_un_email_valido">Ingrese un email valido.</string>
    <string name="contrasenia_no_es_valida">La contraseña es debil\nSe requiere 1 carácter\nespecial y al menos 4\ncaracteres.</string>
    <string name="contrasenia_no_coincide">Las contraseñas\nNo coinciden.</string>
    <string name="contrasenia_actual_incorrecta">La contraseña actual\nes incorrecta.</string>
    <string name="contrasenia_cambiada">Se cambio la contraseña.</string>
    <string name="todos_los_campos_requeridos">Todos los campos\nson obligatorios</string>
    <string name="cuenta_no_creada_intentar_de_nuevo">No se pudo crear\nla cuenta.\nVuelva a intertarlo</string>
    <string name="msg_activar_localizacion">Para activar\nla localización ve\na ajustes y acepta\nlos permisos</string>
    <string name="msg_aceptar_permisos">Ve a ajustes y\nacepta los permisos</string>
</resources>