<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aesc.proyectofinaldesarrollomovil.ui.fragments.maps.MapsFragment"
        android:label="@string/nav_mapa"
        tools:layout="@layout/maps_fragment" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.aesc.proyectofinaldesarrollomovil.ui.fragments.history.HistoryFragment"
        android:label="@string/nav_historial"
        tools:layout="@layout/history_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.aesc.proyectofinaldesarrollomovil.ui.fragments.profile.ProfileFragment"
        android:label="@string/nav_perfil"
        tools:layout="@layout/profile_fragment" />
</navigation>